Corrected the layout of awards and cv. Layout of reel is next on the list.
I've also removed the scrollbar styling and the styling of the photo's.

--- a/public/stylesheets/persistent.css
+++ b/public/stylesheets/persistent.css
@@ -77,7 +77,6 @@ body {
 
 #contents {
 	top: 36px;
-	/*width: 100%;*/
 	height: 85%;
 	display: none;
 	clear: both;
@@ -89,42 +88,22 @@ body {
 	display: none;
 	width: 25em;
 	height: 13em;
-	margin: 2em 0 0 10em;
+	margin: 2em 0 0 14em;
 	border: none;
-	position: relative;
+	position: absolute;
 	z-index: 2;
 }
 
 #cv {
 	display: none;
-	position: relative;
+	position: absolute;
 	width: 55em;
-	height: 100%;
-	left: 50%;
-	margin-left: -27em;
-	top: 0;
+	height: 85%;
+	left: 14em;
+	top: 2em;;
 	border: none;
 	z-index: 2;
 }
-
-/*
- * The following segment of CSS defines the coloring of scroll bars.
- * This is special styling, that will only work in IE. Firefox and Safari ignore this 
- * styling. Chrome hasn't been checked yet.
- */
-#cv {
-	/* I don't think it's possible to delete the color from the track. */
-	scrollbar-track-color: white;
-	scrollbar-face-color: black;
-	scrollbar-shadow-color: black;
-	scrollbar-highlight-color:black;
-	scrollbar-3dlight-color: black;
-	scrollbar-darkshadow-color: black;
-	scrollbar-arrow-color: black;
-}
-/*
- * End of scrollbar specific styling.
- */
 
 #reel {
 	display: none;
@@ -136,17 +115,3 @@ body {
 	left: 50%;
 	border: none;
 }
-
-/*
-The style for photos.html is in that file. Should the styles be removed from here?
-
-#reel li img {
-	height: 50px;
-	width: 50px;
-}
-
-#reel li img:hover{
-	height: 200px;
-	width: 200px;
-}
-*/
